--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,8 +3,24 @@ name: CI
 on:
   push:
     branches: [main, develop]
+    paths-ignore:
+      - "**/*.md"
+      - "**/*.yml"
+      - "**/*.yaml"
+      - "LICENSE*"
+      - ".gitignore"
+      - ".gitattributes"
+      - "docs/**"
   pull_request:
     branches: [main]
+    paths-ignore:
+      - "**/*.md"
+      - "**/*.yml"
+      - "**/*.yaml"
+      - "LICENSE*"
+      - ".gitignore"
+      - ".gitattributes"
+      - "docs/**"
 
 env:
   CARGO_TERM_COLOR: always
