--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ proc-macro2 = "1.0"
 [dev-dependencies]
 trybuild = "1.0"
 serde = { version = "1.0", features = ["derive"] }
+proptest = "1.9"
 
 [features]
 default = []
