Downgrade proptest dev dependency to 1.4 to maintain compatibility with rust-version = "1.70.0" as the MSRV

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ proc-macro2 = "1.0"
 [dev-dependencies]
 trybuild = "1.0"
 serde = { version = "1.0", features = ["derive"] }
-proptest = "1.9"
+proptest = "1.4"                                   # Old version to maintain compatibility with Rust 1.70.0
 
 [features]
 default = []
